src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>P7S1_DandASalesKundenstatus__c</fullName>
        <label>d&amp;a Sales Kundenstatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Neukunde</fullName>
                    <default>true</default>
                    <label>Neukunde</label>
                </value>
                <value>
                    <fullName>Bestandskunde</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_Dash_Message__c</fullName>
        <description>Nachricht wird dynamisch im Account Dashboard angezeigt</description>
        <formula>IF(
ungueltiger_Account__c = true ,
&apos;ACHTUNG - Account ungültig&apos; ,
IF(
AND(
OR(
SomTv_ZuUeberpruefenAcc__c = true ,
SomTv_zuUeberpruefenSalesSteeringAcc__c = true
), RecordType.Id = &apos;012570000007QSI&apos;
),
&apos;Account in Überprüfung - Bearbeiten nicht möglich&apos; ,
IF(
OR(
SomTv_ZuUeberpruefenAcc__c = true ,
SomTv_zuUeberpruefenSalesSteeringAcc__c = true
),
&apos;Account in Überprüfung - Bearbeitung weiterhin möglich&apos;,&apos;&apos;
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Nachricht wird dynamisch im Account Dashboard angezeigt</inlineHelpText>
        <label>Dashboard Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Dash_Severity__c</fullName>
        <label>Dashboard Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>info</fullName>
                </value>
                <value>
                    <fullName>warning</fullName>
                </value>
                <value>
                    <fullName>danger</fullName>
                </value>
                <value>
                    <fullName>none</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_DataCheck__c</fullName>
        <description>Status der Datenprüfung. Zeigt an, ob Datensätze zur Datenprüfung anstehend sind oder Prüfung erfolgt ist.</description>
        <inlineHelpText>Status der Datenprüfung. Zeigt an, ob Datensätze zur Datenprüfung anstehend sind oder Prüfung erfolgt ist.</inlineHelpText>
        <label>Datenprüfung</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ausstehend</fullName>
                    <color>#FF0000</color>
                    <label>ausstehend</label>
                </value>
                <value>
                    <fullName>geprüft</fullName>
                    <color>#78C953</color>
                    <default>true</default>
                    <label>geprüft</label>
                </value>
                <value>
                    <fullName>irrelevant</fullName>
                    <color>#DDDDDD</color>
                    <label>irrelevant</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_ExtHierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>erweiterte 4-stufige Account-Hierachie</description>
        <inlineHelpText>erweiterte 4-stufige Account-Hierachie</inlineHelpText>
        <label>übergeordneter Account (erw.)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>untergeordnete Accounts (erw.)</relationshipLabel>
        <relationshipName>P7S1_ExtHierarchy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_Genehmigungsstatusungueltig__c</fullName>
        <description>Hier wird aus dem Genehmigungsprozess zum ungültig setzen der Status vorgehalten. Wird durch den Genehmigungsprozess gesetzt.</description>
        <inlineHelpText>Hier wird aus dem Genehmigungsprozess zum ungültig setzen der Status vorgehalten. Wird durch den Genehmigungsprozess gesetzt.</inlineHelpText>
        <label>Genehmigungsstatus ungültig</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eingereicht</fullName>
                </value>
                <value>
                    <fullName>Genehmigt</fullName>
                </value>
                <value>
                    <fullName>Abgelehnt</fullName>
                </value>
                <value>
                    <fullName>erneut gültig</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Konzermutter_ID__c</fullName>
        <formula>IF( Parent.Id  = &quot;&quot;,  Id , IF(Parent.Parent.Id  = &quot;&quot;, Parent.Id , IF(Parent.Parent.Parent.Id  = &quot;&quot;, Parent.Parent.Id , Parent.Parent.Parent.Id ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Konzermutter ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_KonzernAgenturverbundZugehoerigkeit__c</fullName>
        <description>Zugehörigkeit zu Konzern oder Agenturverbund</description>
        <inlineHelpText>Zugehörigkeit zu Konzern oder Agenturverbund</inlineHelpText>
        <label>Konzern-/Agenturverbunds-Zugehörigkeit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>konzernfrei/verbundfrei</fullName>
                </value>
                <value>
                    <fullName>Konzerntochter/Agenturtochter</fullName>
                </value>
                <value>
                    <fullName>Konzern/Agenturverbund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_Konzernmitglied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ist dieser Account Teil der ProSieben Sat1 Konzerngruppe?</description>
        <inlineHelpText>Ist dieser Account Teil der ProSieben Sat1 Konzerngruppe?</inlineHelpText>
        <label>P7S1 Konzernmitglied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_LetzteAenderungUnit__c</fullName>
        <description>Die letzte Änderung am Kontakt wurde durchgeführt durch folgende Unit</description>
        <formula>LastModifiedBy.P7S1_Unit__c</formula>
        <inlineHelpText>Die letzte Änderung am Kontakt wurde durchgeführt durch folgende Unit</inlineHelpText>
        <label>Letzte Änderung durch Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_LetzterBearbeiterBusiness__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Zeigt den letzten Bearbeiter des Datensatzes an, ohne automatische Aktualisierungen und Admintätigkeiten</description>
        <inlineHelpText>Zeigt den letzten Bearbeiter des Datensatzes an, ohne automatische Aktualisierungen und Admintätigkeiten</inlineHelpText>
        <label>Letzter Bearbeiter Business</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_LinkzuLaenderliste__c</fullName>
        <description>Link zu Liste &quot;Land (P7S1)&quot;</description>
        <formula>HYPERLINK(&quot;a3K?fcf=00BD0000008GHEF&quot;, &quot;Infos zu erlaubten Ländernamen&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Ländernamen und Kürzel</inlineHelpText>
        <label>Link zu Länderliste</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_NameDwhDifferent__c</fullName>
        <description>DWH Name abweichend</description>
        <formula>Name !=   P7S1_NameDwh__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>DWH Name abweichend</inlineHelpText>
        <label>Accountname (DWH abweichend)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_NameDwh__c</fullName>
        <description>Accountname, nur mit Zeichen die für DWH verarbeitbar sind (ISO_8859-1)</description>
        <inlineHelpText>Accountname, nur mit Zeichen die für DWH verarbeitbar sind (ISO_8859-1)</inlineHelpText>
        <label>Accountname (DWH)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Organschaft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account ist in der steuerlichen Organschaft von P7S1</description>
        <inlineHelpText>Account ist in der steuerlichen Organschaft von P7S1</inlineHelpText>
        <label>Organschaft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_Planumsatz__c</fullName>
        <label>Planumsatz</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_PreviousRecordTypeId__c</fullName>
        <label>Previous RecordTypeId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_RelevantAgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relevante Agentur</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Relevante Agentur)</relationshipLabel>
        <relationshipName>Agencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_SphereCopy__c</fullName>
        <description>Zuordnung zur jeweiligen Sphere Hilfefeld für die Freigabeeinstellung</description>
        <inlineHelpText>Zuordnung zur jeweiligen Sphere Hilfefeld für die Freigabeeinstellung</inlineHelpText>
        <label>P7S1_SphereCopy</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Sphere__c</fullName>
        <description>Zuordnung zur jeweiligen Sphere</description>
        <formula>Text ( Owner.P7S1_Sphere__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zuordnung zur jeweiligen Sphere</inlineHelpText>
        <label>P7S1_Sphere</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_StatusAT__c</fullName>
        <description>temporäres Feld für die Account Migration für AT</description>
        <inlineHelpText>temporäres Feld für die Account Migration für AT</inlineHelpText>
        <label>Status AT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>markiert</fullName>
                </value>
                <value>
                    <fullName>Accountteam gesetzt</fullName>
                </value>
                <value>
                    <fullName>Inhaber gesetzt</fullName>
                </value>
                <value>
                    <fullName>zu prüfen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_Steuerkennzeichen__c</fullName>
        <description>Wenn es sich um einen konzerninternen Account handelt wird ein Steuerkennzeichen benötigt um für den Fall einer Werbebuchung für diesen Account dies richtig zu bestimmen.</description>
        <inlineHelpText>Wenn es sich um einen konzerninternen Account handelt wird ein Steuerkennzeichen benötigt um für den Fall einer Werbebuchung für diesen Account dies richtig zu bestimmen.</inlineHelpText>
        <label>Steuerkennzeichen</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A0</fullName>
                </value>
                <value>
                    <fullName>A6</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_Submitter4Approval__c</fullName>
        <description>Der aktuelle Einreicher einer Genehmigungsanfrage 
wird mit dem Genehmigungsworkflow gesetzt</description>
        <inlineHelpText>Der aktuelle Einreicher einer Genehmigungsanfrage</inlineHelpText>
        <label>Submitter for Approval</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>P7S1_TopAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Top Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_UniqueUser__c</fullName>
        <description>Unique User des Account. (Siehe auch Lösung dazu)</description>
        <inlineHelpText>Unique User des Account. (Siehe auch Lösung dazu)</inlineHelpText>
        <label>Unique User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P7S1_UnitCreator__c</fullName>
        <description>Zeigt die Unit des Erstellers an</description>
        <formula>CreatedBy.P7S1_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zeigt die Unit des Erstellers an</inlineHelpText>
        <label>Ersteller Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_UnitSharing__c</fullName>
        <description>Feld wird durch Prozess befüllt mit Unit des Account Freigabe Antragstellers, wenn Account Freigabe genehmigt wird</description>
        <inlineHelpText>Units mit denen der Account über Criteria Based Sharing geteilt wird</inlineHelpText>
        <label>Unit Sharing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_Unit__c</fullName>
        <description>Unit des Account Inhabers</description>
        <formula>Owner.P7S1_Unit__c</formula>
        <inlineHelpText>Unit des Account Inhabers</inlineHelpText>
        <label>Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_UstIdNr__c</fullName>
        <description>Umsatzsteuer-Identifikationsnummer. 
in Deutschland: DE + Block mit 9 Ziffern, deren erste Ziffer &gt; 0 sein muss) -&gt; http://de.wikipedia.org/wiki/USt-ID</description>
        <inlineHelpText>Please enter the VAT identification number for this account</inlineHelpText>
        <label>USt-IdNr.</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_ValidSalesExcellence__c</fullName>
        <description>Kennzeichnet einen Account anhand des Datensatztyps als relevant für Sales Excellence</description>
        <formula>CASE ( RecordType.DeveloperName , 
&apos;Werbetreibender&apos; , 1 ,
&apos;Agentur&apos; , 1 ,
&apos;Som_Mitbewerber&apos; , 1 ,
&apos;ProRex_Import&apos; , 1 ,
&apos;sonstiger_Partner&apos; , 1 ,
&apos;ung_ltiger_Account&apos; , 1 ,
&apos;Mandant&apos; , 1 ,
&apos;MA_Default&apos; , 1 ,
&apos;Ven_Customer&apos; , 1 ,
&apos;Ventures_VC_PE_Fund&apos; , 1 ,
&apos;P7S1_tocheck&apos; , 1 ,
0) = 1</formula>
        <inlineHelpText>Kennzeichnet einen Account anhand des Datensatztyps als relevant für Sales Excellence</inlineHelpText>
        <label>Valid for Sales Excellence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProRex_Rolle__c</fullName>
        <description>ehemals ProRex Rolle</description>
        <inlineHelpText>Dieses Feld bildet die historischen Rollen aus dem Altsystem ProRex ab.</inlineHelpText>
        <label>Rolle</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kunde</fullName>
                </value>
                <value>
                    <fullName>Konzern</fullName>
                </value>
                <value>
                    <fullName>Agentur</fullName>
                </value>
                <value>
                    <fullName>Agenturverbund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SOM_Accountbereinigung__c</fullName>
        <label>2016 71M Accountbereinigung</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DELETE</fullName>
                </value>
                <value>
                    <fullName>INVALID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SOM_DigitalSales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Digital Sales</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Accounts (Digital Sales)</relationshipLabel>
        <relationshipName>AccountsDS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOM_DooHSales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DooH Sales</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOM_Einkaufsagenturverkaeufer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Einkaufsagenturverkäufer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Accounts (Einkaufsagenturverkäufer)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOM_HelperDooHSalesTeam__c</fullName>
        <formula>SOM_DooHSales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Helper DooH Sales Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOM_Planungsagenturverkaeufer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planungsagenturverkäufer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Accounts (Planungsagenturverkäufer)</relationshipLabel>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOM_TVKundenverkaeufer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TV Kundenverkäufer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Accounts (TV Kundenverkäufer)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_AbweichungPrognosevsAjVsUmsatzVj__c</fullName>
        <description>Zeigt die absolute Differenz zwischen Umsatz Vorjahr (VJ) zu Prognose aktuelles Jahr (AJ) an</description>
        <formula>SomDig_PrognoseGesamtAj__c -  SomDig_UmsatzGesamtVJ__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zeigt die absolute Differenz zwischen Umsatz Vorjahr (VJ) zu Prognose aktuelles Jahr (AJ) an</inlineHelpText>
        <label>Abweichung Prognose AJ vs. Umsatz VJ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_AbweichungUmsatzAjVsPrognoseAj__c</fullName>
        <description>Zeigt die absolute Differenz zwischen Umsatz zu Prognose des aktuelles Geschäftsahr (AJ)  an</description>
        <formula>SomDig_UmsatzGesamtAJ__c - SomDig_PrognoseGesamtAj__c</formula>
        <inlineHelpText>Zeigt die absolute Differenz zwischen Umsatz zu Prognose des aktuelles Geschäftsahr (AJ)  an</inlineHelpText>
        <label>Abweichung Umsatz AJ vs. Prognose AJ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_Accounttypen__c</fullName>
        <label>Kundenart Digital</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Neu</fullName>
                </value>
                <value>
                    <fullName>Bestand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_AngebotssummeAj__c</fullName>
        <description>Aufsummierung aller Digitalen Angebote für das aktuelle Geschäftsjahr  OHNE mit der Wahrscheinlichkeit des Angebotes multipliziert zu sein</description>
        <inlineHelpText>Aufsummierung aller Digitalen Angebote für as aktuelle Geschäftsjahr OHNE mit der Wahrscheinlichkeit des Angebotes multipliziert zu sein</inlineHelpText>
        <label>Angebotssumme AJ</label>
        <summarizedField>Opportunity.MN2__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Geschlossene und gewonnene, Geschlossen und verloren, Storniert</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Kampagnenstart__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2014</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Kampagnenende__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2014</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_AngebotssummeGewichtetAj__c</fullName>
        <description>Aufsummierung aller Angebote für das aktuelle GJ, welche jeweils mit der Wahrscheinlichkeit des entsprechenden Angebotes multipliziert wurden</description>
        <inlineHelpText>Aufsummierung aller Angebote für das aktuelle GJ, welche jeweils mit der Wahrscheinlichkeit des entsprechenden Angebotes multipliziert wurden</inlineHelpText>
        <label>Angebotssumme gewichtet AJ</label>
        <summarizedField>Opportunity.MN2_Gewichtet__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Kampagnenstart__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2014</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Kampagnenende__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2014</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Geschlossene und gewonnene, Geschlossen und verloren, Storniert</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_CountExterneIDSachkonto__c</fullName>
        <description>Hilfsfeld für Validierung &quot;SomDig_AccKonzernmExtIdSachkto&quot;. Wenn &gt; 0, existiert eine Externe ID vom Typ Sachkonto</description>
        <inlineHelpText>Hilfsfeld für Validierung &quot;SomDig_AccKonzernmExtIdSachkto. Wenn &gt; 0, existiert eine Externe ID vom Typ Sachkonto</inlineHelpText>
        <label>Sachkonten konzernintern (Externe ID)</label>
        <summaryFilterItems>
            <field>P7S1_ExternalId__c.P7S1_Source__c</field>
            <operation>equals</operation>
            <value>Sachkonto konzernintern</value>
        </summaryFilterItems>
        <summaryForeignKey>P7S1_ExternalId__c.P7S1_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_DebitorennrBarter__c</fullName>
        <label>SomDig DebitorennrBarter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Debitorennr__c</fullName>
        <description>Hidden Field, Storing external id for the media campaign</description>
        <label>SomDig Debitorennr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_KundenClusterPlanung__c</fullName>
        <description>Kundencluster nach Prognose des aktuellen Jahres</description>
        <formula>IF(  SomDig_PrognoseGesamtAj__c   &gt; 800000,(IMAGE(&apos;http://www.71m.de/a.png&apos;, &quot;A&quot;,15,15)),IF(SomDig_PrognoseGesamtAj__c  &gt; 200000, (IMAGE(&apos;http://www.71m.de/b.png&apos;, &quot;B&quot; ,15,15)),  IF(SomDig_PrognoseGesamtAj__c  &gt; 50000,(IMAGE(&apos;http://www.71m.de/c.png&apos;, &quot;C&quot; , 15, 15)), (IMAGE(&apos;http://www.71m.de/d.png&apos;, &quot;D&quot; ,15,15)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Kundencluster nach Prognose des aktuellen Jahres
A: Prognose gesamt &gt; 800.000 EUR
B: Prognose gesamt &gt; 200.000 EUR &amp; &lt;= 800.000 EUR
C: Prognose gesamt &gt; 50.000 EUR &amp; &lt;= 200.000 EUR
D: Prognose gesamt: &lt;= 50.000 EUR</inlineHelpText>
        <label>Kunden-Cluster Planung</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_PartnerId__c</fullName>
        <label>Partner ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_PrognoseGesamtAj__c</fullName>
        <description>Fasst alle Prognosen (des aktuellen Geschäftsjahres) eines Werbetreibenden am Account zusammen.</description>
        <formula>SomDig_PrognoseMedDiffInStreamAJ__c +
SomDig_PrognoseMedDiffInPageAJ__c +
SomDig_PrognoseMedDiffRestAJ__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Fasst alle Prognosen (des aktuellen Geschäftsjahres) eines Werbetreibenden am Account zusammen</inlineHelpText>
        <label>Prognose gesamt AJ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_PrognoseMedDiffInPageAJ__c</fullName>
        <description>Summe aller InPage-Werte der Beziehungen aus dem aktuellen Geschäftsjahr.</description>
        <inlineHelpText>Summe aller InPage-Werte der Beziehungen aus dem aktuellen Geschäftsjahr.</inlineHelpText>
        <label>Prognose InPage AJ</label>
        <summarizedField>SomDig_WtAgBeziehung__c.SomDig_PrognoseMedDiffInPage__c</summarizedField>
        <summaryForeignKey>SomDig_WtAgBeziehung__c.SomDig_Werbetreibender__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_PrognoseMedDiffInStreamAJ__c</fullName>
        <description>Summe aller InStream-Werte der Beziehungen aus dem aktuellen Geschäftsjahr.</description>
        <inlineHelpText>Summe aller InStream-Werte der Beziehungen aus dem aktuellen Geschäftsjahr.</inlineHelpText>
        <label>Prognose InStream AJ</label>
        <summarizedField>SomDig_WtAgBeziehung__c.SomDig_PrognoseMedDiffInStream__c</summarizedField>
        <summaryForeignKey>SomDig_WtAgBeziehung__c.SomDig_Werbetreibender__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_PrognoseMedDiffRestAJ__c</fullName>
        <description>Summe aller Digital TV (inkl. Mediaaufwand)-Werte der Beziehungen aus dem aktuellen Geschäftsjahr.</description>
        <inlineHelpText>Summe aller Digital TV (inkl. Mediaaufwand)-Werte der Beziehungen aus dem aktuellen Geschäftsjahr.</inlineHelpText>
        <label>Prognose Digital TV(inkl. Mediaaufw.) AJ</label>
        <summarizedField>SomDig_WtAgBeziehung__c.SomDig_PrognoseMedDiffRest__c</summarizedField>
        <summaryForeignKey>SomDig_WtAgBeziehung__c.SomDig_Werbetreibender__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_TeletextBranchen__c</fullName>
        <description>Commerce bzw. Teletext hat seine eigenen Zuordnungen zu begrenzten Branchen - die werden jedoch den Nielsen- Wirtschaftsbereichen und Wirtschaftsgruppen zugeordnet über Feldabhänigkeiten</description>
        <inlineHelpText>Commerce bzw. Teletext hat seine eigenen Zuordnungen zu begrenzten Branchen - die werden jedoch den Nielsen- Wirtschaftsbereichen und Wirtschaftsgruppen zugeordnet</inlineHelpText>
        <label>Teletext Branchen</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automobil</fullName>
                </value>
                <value>
                    <fullName>Banken</fullName>
                </value>
                <value>
                    <fullName>Erotik</fullName>
                </value>
                <value>
                    <fullName>Finanzen</fullName>
                </value>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Gewinnspiele</fullName>
                </value>
                <value>
                    <fullName>Horoskope</fullName>
                </value>
                <value>
                    <fullName>Immobilien</fullName>
                </value>
                <value>
                    <fullName>Klingeltöne</fullName>
                </value>
                <value>
                    <fullName>Kreditvermittlung</fullName>
                </value>
                <value>
                    <fullName>Lotterie</fullName>
                </value>
                <value>
                    <fullName>Medien</fullName>
                </value>
                <value>
                    <fullName>Ö-Urlaub/Hotels</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Reise</fullName>
                </value>
                <value>
                    <fullName>Service (Hotlines etc.)</fullName>
                </value>
                <value>
                    <fullName>Shopping/Versand</fullName>
                </value>
                <value>
                    <fullName>Sonstige</fullName>
                </value>
                <value>
                    <fullName>Sonstige - nicht zugeordnet</fullName>
                </value>
                <value>
                    <fullName>Telekommunikation</fullName>
                </value>
                <value>
                    <fullName>Versicherungen</fullName>
                </value>
                <value>
                    <fullName>Wellness/Beauty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_UmsatzGesamtAJ__c</fullName>
        <description>Fasst alle Umsätze eines Werbetreibenden am Account zusammen (Summe aller Mediagattungs-Differenzierungen) des aktuellen Geschäftsjahres (AJ)</description>
        <formula>SomDig_UmsatzMedDiffInStreamAJ__c + SomDig_UmsatzMedDiffInPageAJ__c + SomDig_UmsatzMedDiffRestAJ__c</formula>
        <inlineHelpText>Fasst alle Umsätze eines Werbetreibenden am Account zusammen (Summe aller Mediagattungs-Differenzierungen) des aktuellen Geschäftsjahres (AJ)</inlineHelpText>
        <label>Umsatz gesamt AJ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_UmsatzGesamtVJ__c</fullName>
        <description>Summe Umsatz des Vorjahres, Mediagattung gleich Digital</description>
        <inlineHelpText>Summe Umsatz des Vorjahres, Mediagattung gleich Digital</inlineHelpText>
        <label>Umsatz gesamt VJ</label>
        <summarizedField>SomDig_WtAgBeziehung__c.SomDig_UmsatzGesamtVj__c</summarizedField>
        <summaryForeignKey>SomDig_WtAgBeziehung__c.SomDig_Werbetreibender__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_UmsatzMedDiffInPageAJ__c</fullName>
        <description>Summe aller InPage-Werte der Beziehungen aus dem aktuellen Geschäftsjahr.</description>
        <inlineHelpText>Summe aller InPage-Werte der Beziehungen aus dem aktuellen Geschäftsjahr.</inlineHelpText>
        <label>Umsatz InPage AJ</label>
        <summarizedField>SomDig_WtAgBeziehung__c.SomDig_UmsatzMedDiffInPage__c</summarizedField>
        <summaryForeignKey>SomDig_WtAgBeziehung__c.SomDig_Werbetreibender__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_UmsatzMedDiffInStreamAJ__c</fullName>
        <description>Summe aller InStream-Werte der Beziehungen aus dem aktuellen Geschäftsjahr.</description>
        <inlineHelpText>Summe aller InStream-Werte der Beziehungen aus dem aktuellen Geschäftsjahr.</inlineHelpText>
        <label>Umsatz InStream AJ</label>
        <summarizedField>SomDig_WtAgBeziehung__c.SomDig_UmsatzMedDiffInStream__c</summarizedField>
        <summaryForeignKey>SomDig_WtAgBeziehung__c.SomDig_Werbetreibender__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_UmsatzMedDiffRestAJ__c</fullName>
        <description>Summe aller Digital TV (inkl. Mediaaufwand)-Werte der Beziehungen aus dem aktuellen Geschäftsjahr.</description>
        <inlineHelpText>Summe aller Digital TV (inkl. Mediaaufwand)-Werte der Beziehungen aus dem aktuellen Geschäftsjahr.</inlineHelpText>
        <label>Umsatz Digital TV(inkl. Mediaaufwand) AJ</label>
        <summarizedField>SomDig_WtAgBeziehung__c.SomDig_UmsatzMedDiffRest__c</summarizedField>
        <summaryForeignKey>SomDig_WtAgBeziehung__c.SomDig_Werbetreibender__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>